@@ -21,6 +21,7 @@
  * General cleanup
  * Make C-w closer to actual emacs behaviour (#612)
  * Make M-h behave more like emacs (#611)
+ * Hint with buffer names when using C-k with emacs keymap (#606)
 
 0.9.0
 -----
